# mbedtls-fuzz

./: CMakeLists-1.3.patch  CMakeLists-2.0.patch  LICENSE  README.md  config-1.3.h  config-2.0.h  crash-analysis.sh  mbedtls-1.3.12.patch  mbedtls-2.0.0.patch  selftls-1.3.c  selftls-2.0.c  selftls-2.c  setup.sh  time-1.3.patch  time-2.patch
fuzz/: CMakeLists.txt  compile.sh  fuzz.sh
